--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3905,6 +3905,19 @@
                        android:value="com.benzo.settings.ButtonSettings" />
         </activity>
 
+        <!-- Global Actions -->
+        <activity android:name="Settings$GlobalActionsSettingsActivity"
+                  android:label="@string/benzo_extras_global_actions_title"
+                  android:exported="true"
+                  android:taskAffinity="com.android.settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.benzo.settings.GlobalActionsSettings" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
