--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3850,6 +3850,35 @@
                   android:theme="@style/SudThemeGlif.Light">
         </activity>
 
+        <!-- BenzoExtras -->
+        <activity android:name="Settings$BenzoSettingsActivity"
+                  android:label="@string/benzo_settings_title"
+                  android:icon="@drawable/ic_homepage_benzo"
+                  android:exported="true"
+                  android:taskAffinity="com.android.settings">
+            <intent-filter android:priority="1">
+                <action android:name="com.benzo.settings.BenzoSettings" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="10">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.order"
+                       android:value="-1"/>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.benzo.settings.BenzoSettings" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/benzo_dashboard_summary"/>
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
