--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3935,6 +3935,19 @@
                        android:value="com.benzo.settings.VolumeStepsFragment" />
         </activity>
 
+        <!-- Statusbar -->
+        <activity android:name="Settings$StatusbarSettingsActivity"
+                  android:label="@string/benzo_extras_statusbar_title"
+                  android:exported="true"
+                  android:taskAffinity="com.android.settings" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.benzo.settings.StatusbarSettings" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
