--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3879,6 +3879,32 @@
                        android:resource="@string/benzo_dashboard_summary"/>
         </activity>
 
+        <!-- Quick Settings -->
+        <activity android:name="Settings$QuickSettingsActivity"
+                  android:label="@string/benzo_extras_quicksettings_title"
+                  android:exported="true"
+                  android:taskAffinity="com.android.settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.benzo.settings.QuickSettings" />
+        </activity>
+
+        <!-- Buttons -->
+        <activity android:name="Settings$ButtonSettingsActivity"
+                  android:label="@string/benzo_extras_buttons_title"
+                  android:exported="true"
+                  android:taskAffinity="com.android.settings" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.benzo.settings.ButtonSettings" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
